--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,8 @@ link_directories(ThirdParty/lib)
 add_executable(${PROJECT_NAME} main.cpp)
 
 target_link_libraries(${PROJECT_NAME} mingw32 SDL2main SDL2)
+
+add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+        "../ThirdParty/SDL2.dll"
+        $<TARGET_FILE_DIR:${PROJECT_NAME}>)
