--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.13.2)
 
-project(learnSDL2)
+project(GridForge)
 
 include_directories(ThirdParty/include)
 link_directories(ThirdParty/lib)
