Included SDL_image.h in build step

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,14 @@ include_directories(ThirdParty/include)
 link_directories(ThirdParty/lib)
 add_executable(${PROJECT_NAME} main.cpp)
 
-target_link_libraries(${PROJECT_NAME} mingw32 SDL2main SDL2)
+target_link_libraries(${PROJECT_NAME} mingw32 SDL2main SDL2 SDL2_image)
 
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
         "../ThirdParty/SDL2.dll"
+        $<TARGET_FILE_DIR:${PROJECT_NAME}>)
+
+add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+        "../ThirdParty/SDL2_image.dll"
         $<TARGET_FILE_DIR:${PROJECT_NAME}>)
