Added functionality of F11 fullscreen

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,13 +4,12 @@ project(GridForge)
 
 include_directories(ThirdParty/include)
 link_directories(ThirdParty/lib)
-# add_executable(${PROJECT_NAME} main.cpp)
 if(WIN32)
-    add_executable(${PROJECT_NAME} main.cpp "../Assets/Icons/resources.rc")
+    add_executable(${PROJECT_NAME} test.cpp "../Assets/Icons/resources.rc")
     #Once making a release add WIN32 so that no console additions are made
     #for now since we debugging i will remove it 
 else()
-    add_executable(${PROJECT_NAME} main.cpp)
+    add_executable(${PROJECT_NAME} test.cpp)
 endif()
 
 target_link_libraries(${PROJECT_NAME} mingw32 SDL2main SDL2 SDL2_image)
